--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "mongoose": "^6.7.0"
   },
   "devDependencies": {
